Add loading drop-down options dynamically, even if it doesn't work

--- a/courses.html
+++ b/courses.html
@@ -154,16 +154,17 @@
                   aria-haspopup="true"
                   aria-expanded="false"
                 >
-                  <span>Novice</span>
+                  <span>loading...</span>
                 </a>
 
                 <div
                   class="dropdown-menu mt-0"
                   aria-labelledby="topic-drop-down"
                 >
-                  <a class="dropdown-item" href="#">Novice</a>
-                  <a class="dropdown-item" href="#">Intermediate</a>
-                  <a class="dropdown-item" href="#">Expert</a>
+                  <!-- 
+                    options here:
+                    <a class="dropdown-item" href="#">
+                  -->
                 </div>
               </div>
             </div>
@@ -181,16 +182,17 @@
                   aria-haspopup="true"
                   aria-expanded="false"
                 >
-                  <span>Most Popular</span>
+                  <span>loading...</span>
                 </a>
 
                 <div
                   class="dropdown-menu mt-0"
                   aria-labelledby="sort-by-dropdown"
                 >
-                  <a class="dropdown-item" href="#">Most Popular</a>
-                  <a class="dropdown-item" href="#">Most Recent</a>
-                  <a class="dropdown-item" href="#">Most Viewed</a>
+                  <!--
+                    options here:
+                    <a class="dropdown-item" href="#">
+                  -->
                 </div>
               </div>
             </div>
