Finally get the dropdowns to work

--- a/courses.html
+++ b/courses.html
@@ -144,12 +144,12 @@
               <span class="text-white font-weight-bold drop-down-title"
                 >TOPIC</span
               >
-              <div class="dropdown">
+              <div id="topic-dropdown" class="dropdown">
                 <a
                   class="btn dropdown-toggle text-left"
                   href="#"
                   role="button"
-                  id="topic-drop-down"
+                  id="topic-dropdown-header"
                   data-toggle="dropdown"
                   aria-haspopup="true"
                   aria-expanded="false"
@@ -159,7 +159,7 @@
 
                 <div
                   class="dropdown-menu mt-0"
-                  aria-labelledby="topic-drop-down"
+                  aria-labelledby="topic-dropdown"
                 >
                   <!-- 
                     options here:
@@ -172,12 +172,12 @@
               <span class="text-white font-weight-bold drop-down-title"
                 >SORT BY</span
               >
-              <div class="dropdown">
+              <div id="sort-by-dropdown" class="dropdown">
                 <a
                   class="btn dropdown-toggle text-left"
                   href="#"
                   role="button"
-                  id="sort-by-dropdown"
+                  id="sort-by-dropdown-header"
                   data-toggle="dropdown"
                   aria-haspopup="true"
                   aria-expanded="false"
