--- a/courses.html
+++ b/courses.html
@@ -154,7 +154,7 @@
                   aria-haspopup="true"
                   aria-expanded="false"
                 >
-                  <span>loading...</span>
+                  <span></span>
                 </a>
 
                 <div
@@ -182,7 +182,7 @@
                   aria-haspopup="true"
                   aria-expanded="false"
                 >
-                  <span>loading...</span>
+                  <span></span>
                 </a>
 
                 <div
